chore(scripts): optimize setup scripts
	- change environment variable names
	- update ansible scripts
	- update vof start-up script
	- update terraform scripts
	- increase redis db indexes

why: To make it easier to orchestrate environment specific infrastructure.

[finishes #162726246]

--- a/packer/vof/playbook.yml
+++ b/packer/vof/playbook.yml
@@ -5,9 +5,8 @@
   gather_facts: no
   vars:
     ansible_python_interpreter: '/usr/bin/python3'
-    vof_path: '{{lookup("env", "vof_path")}}'
-    bucket_name: '{{lookup("env", "bucket_name")}}'
-    service_account_json: '{{lookup("env", "service_account_json")}}'
+    bucket_name: '{{lookup("env", "BUCKET_NAME")}}'
+    service_account_json: '{{lookup("env", "SERVICE_ACCOUNT_JSON")}}'
   roles:
     - setup
     - copy-files
